fix: the issue on small long screens
Martijns issue

Refs: oph-717

--- a/app/styles/components/_c-home.scss
+++ b/app/styles/components/_c-home.scss
@@ -5,7 +5,6 @@
 .c-home--content {
   display: flex;
   align-items: center;
-  height: 100%;
   justify-content: center;
 }
 
@@ -15,7 +14,7 @@
 
 @media ((max-width: 63.9375em)) {
   .c-home-smaller-image-when-mobile {
-    max-width: 10vh;
+    max-width: 15vh;
   }
   .au-c-sidebar {
     border: 0px;
